--- a/src/app/protected/cephalix/institutes/details/edit/institute-edit.component.html
+++ b/src/app/protected/cephalix/institutes/details/edit/institute-edit.component.html
@@ -13,6 +13,7 @@
     <form [formGroup]="editForm" (ngSubmit)="onSubmit(editForm.value)">
       <ion-card-header>
         <ion-toolbar>
+          <ion-card-title>{{ 'Modify selected institute:' | translate}} "{{object.name}}"</ion-card-title>
           <ion-buttons slot="end">
             <ion-button size="small" fill="solid" fill="clear" type="submit" class="ion-no-margin" [disabled]="!editForm.valid"
               matTooltip="{{'Apply changes' | translate }}">
