--- a/src/app/protected/cranix/mygroups/mygroups.page.html
+++ b/src/app/protected/cranix/mygroups/mygroups.page.html
@@ -20,6 +20,7 @@
   <ion-card>
     <ion-card-header>
       <ion-toolbar>
+        <ion-card-title>{{'Manage groups' | translate}}</ion-card-title>
         <ion-item>
           <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('mygroupsFilter')" id="mygroupsFilter">
           </ion-input>
