--- a/src/app/protected/cranix/softwares/packages/software-packages.component.html
+++ b/src/app/protected/cranix/softwares/packages/software-packages.component.html
@@ -19,6 +19,7 @@
   <ion-card>
     <ion-card-header>
       <ion-toolbar>
+        <ion-card-title>{{'Available software packages:' | translate}}</ion-card-title>
           <ion-item>
             <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('softwareFilter')" id="softwareFilter">
             </ion-input>
