--- a/src/app/protected/cranix/system/config/system-config.component.html
+++ b/src/app/protected/cranix/system/config/system-config.component.html
@@ -21,7 +21,7 @@
     </ion-col>
   </ion-row>
   <ion-card>
-    <ion-content>
+    <ion-card-content>
       <ion-grid>
         <div *ngFor="let config of configs">
           <ion-row *ngIf="config.path == toShow">
@@ -56,6 +56,6 @@
           </ion-row>
         </div>
       </ion-grid>
-    </ion-content>
+    </ion-card-content>
   </ion-card>
 </ion-content>
