--- a/src/app/protected/cranix/system/status/system-status.component.html
+++ b/src/app/protected/cranix/system/status/system-status.component.html
@@ -26,6 +26,7 @@
   </ion-fab>
   <ion-card>
     <ion-card-header>
+      <ion-card-title>{{'System status' | translate}}</ion-card-title>
       <ion-toolbar>
         <ion-buttons slot="end">
           <ion-button size="small" fill="solid" (click)="support($event)" matTooltip="{{'Add support' | translate }}">
