--- a/src/app/protected/cranix/users/lists/users-lists.page.html
+++ b/src/app/protected/cranix/users/lists/users-lists.page.html
@@ -1,5 +1,4 @@
-<!--cranix-toolbar></cranix-toolbar>
-<ion-row class="header-row"></ion-row-->
+<cranix-toolbar></cranix-toolbar>
 <ion-tabs>
     <ion-tab-bar translucent slot="bottom">
       <ion-tab-button tab="all">
