--- a/src/app/protected/edu/lessons/tabs/room-control/device/roomdev.component.html
+++ b/src/app/protected/edu/lessons/tabs/room-control/device/roomdev.component.html
@@ -1,6 +1,6 @@
 <ion-card no-margin>
-  <ion-card-header *ngIf="device">
-    <ion-toolbar>
+  <ion-card-header *ngIf="device" style="padding: 1px;">
+    <ion-toolbar style="padding: 1px;">
       <ion-label>
         {{device.name}} : {{ device.loggedInName }}
       </ion-label>
