--- a/src/app/protected/toolbar/toolbar.component.html
+++ b/src/app/protected/toolbar/toolbar.component.html
@@ -9,7 +9,9 @@
       <ion-button fill="clear" (click)="objectService.initialize(true)" matTooltip="{{ 'Refresh all objects' | translate }}">
         <ion-icon color="tertiary" name="refresh"></ion-icon>
       </ion-button>
-      <!--ion-button fill="clear" (click)="closeWindow()">
+      <ion-button fill="clear" target="_blank" href="https://wiki.cephalix.eu">
+        <ion-icon color="tertiary" name="book"></ion-icon>
+      </ion-button>      <!--ion-button fill="clear" (click)="closeWindow()">
         <ion-badge color="secondary" slot="end">118k</ion-badge>
       </ion-button -->
       <ion-button fill="clear" (click)="retirectToSettings($event)" matTooltip="{{ 'Edit user preferences' | translate }}">
