--- a/src/app/protected/cephalix/institutes/details/synced-objects/institute-synced-objects.component.html
+++ b/src/app/protected/cephalix/institutes/details/synced-objects/institute-synced-objects.component.html
@@ -8,29 +8,20 @@
 <ion-content (window:resize)="onResize($event)">
   <ion-card>
     <ion-card-header>
-      <ion-row class="ion-align-items-center">
-        <ion-col size="3">
-          <ion-item>
-            <ion-input placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()" id="memberFilter">
-            </ion-input>
-          </ion-item>
-        </ion-col>
-        <ion-col size="7">
-        </ion-col>
-      </ion-row>
+      <ion-toolbar>
+        <ion-card-title>{{ 'List of synchronized objects in the selected institute:' | translate}} {{institute.name}}
+        </ion-card-title>
+        <ion-item>
+          <ion-input placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()" id="memberFilter">
+          </ion-input>
+        </ion-item>
+      </ion-toolbar>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular #agGrid
-        style="width: 100%; height: 450px;"
-        class="{{authService.settings.agGridThema}}"
-        [modules]="modules"
-        [rowData]="memberData"
-        [columnDefs]="columnDefs"
-        [autoGroupColumnDef]="autoGroupColumnDef"
-        [context]="context"
-        rowSelection="multiple"
-        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
-        (gridReady)="onMemberReady($event)"
+      <ag-grid-angular #agGrid style="width: 100%; height: 450px;" class="{{authService.settings.agGridThema}}"
+        [modules]="modules" [rowData]="memberData" [columnDefs]="columnDefs" [autoGroupColumnDef]="autoGroupColumnDef"
+        [context]="context" rowSelection="multiple"
+        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (gridReady)="onMemberReady($event)"
         id="memberTable">
       </ag-grid-angular>
     </ion-card-content>
