--- a/src/app/protected/cranix/security/unbound/unbound.component.html
+++ b/src/app/protected/cranix/security/unbound/unbound.component.html
@@ -36,6 +36,7 @@
       </ion-col>
       <ion-col>
         <ion-list>
+          <ion-card-title>{{ 'Manage DNS Filter Configuration' | translate}}</ion-card-title>
           <ion-item>
             <ion-title>{{'Own Black List'|translate}}</ion-title>
           </ion-item>
