--- a/src/app/protected/cephalix/institutes/lists/institutes-sync-objects.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes-sync-objects.component.html
@@ -2,11 +2,9 @@
 <ion-content id="carded">
   <ion-row class="header-row">
     <ion-col size=6>
-      <ion-title>{{'Define synchronisation of objects: institutes' | translate}}</ion-title>
+      <ion-title>{{'Define synchronisation of objects for the selected institutes' | translate}}</ion-title>
     </ion-col>
-  </ion-row>
-  <ion-row *ngIf="cephalixService.selectedInstitutes.length == 0">
-    <ion-col size=12>
+    <ion-col *ngIf="cephalixService.selectedInstitutes.length == 0" size=12>
       <ion-label color="danger">{{'You have to select some institutes to be able to use this site.'}}</ion-label>
     </ion-col>
   </ion-row>
@@ -28,15 +26,15 @@
   <ion-card>
     <ion-card-header class="hidden-xs hidden-sm hidden-md">
       <ion-card-title matTooltip="{{ cephalixService.selectedList }}">
-        {{'Define synchronisation of objects: institutes' | translate}}</ion-card-title>
-      <ion-row class="hidden-xs hidden-sm hidden-md">
-        <ion-col size="3">
-          <ion-item>
-            <ion-input placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()" id="memberFilter">
-            </ion-input>
-          </ion-item>
-        </ion-col>
-        <ion-col offset="6" size="3" class="ion-text-end hidden-xs hidden-sm hidden-md">
+        {{'Define synchronisation of objects for the selected institutes' | translate}}</ion-card-title>
+      <ion-card-subtitle *ngIf="cephalixService.selectedInstitutes.length == 0">
+        {{'You have to select some institutes to be able to use this site.'}}</ion-card-subtitle>
+      <ion-toolbar *ngIf="cephalixService.selectedInstitutes.length != 0">
+        <ion-item>
+          <ion-input placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()" id="memberFilter">
+          </ion-input>
+        </ion-item>
+        <ion-buttons slot="end">
           <ion-button size="small" (click)="startSync($event)"
             matTooltip="{{'Start  synchronisation of selected objects to the selected institutes.' | translate }} {{ cephalixService.selectedList }}">
             <ion-icon slot="icon-only" color="success" name="code-working"></ion-icon>
@@ -45,10 +43,10 @@
             matTooltip="{{'Stop  synchronisation of selected objects to the selected institutes.' | translate }}  {{ cephalixService.selectedList }}">
             <ion-icon slot="icon-only" color="danger" name="code-working"></ion-icon>
           </ion-button>
-        </ion-col>
-      </ion-row>
+        </ion-buttons>
+      </ion-toolbar>
     </ion-card-header>
-    <ion-card-content>
+    <ion-card-content *ngIf="cephalixService.selectedInstitutes.length != 0">
       <ag-grid-angular #agGrid id="institutesSyncObjectsTable" style="width: 100%; height: 100%;"
         class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}" [modules]="modules"
         [rowData]="memberData" [columnDefs]="columnDefs" [autoGroupColumnDef]="autoGroupColumnDef" [context]="context"
