--- a/src/app/protected/cranix/security/unbound/unbound.component.html
+++ b/src/app/protected/cranix/security/unbound/unbound.component.html
@@ -4,18 +4,23 @@
     <ion-col size=11>
       <ion-title>{{ 'Manage DNS Filter Configuration' | translate}}</ion-title>
     </ion-col>
+  </ion-row>
+  <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
+    <ion-fab-button>
+      <ion-icon name="arrow-forward-circle"></ion-icon>
+    </ion-fab-button>
     <ion-fab-list side="start">
-      <ion-fab-button (click)="writeConfig()">
-        <ion-icon slot="icon-only" color="success" name="checkmark"></ion-icon>
+      <ion-fab-button (click)="writeConfig()" [disabled]="saving">
+        <ion-icon name="checkmark"></ion-icon>
       </ion-fab-button>
     </ion-fab-list>
-  </ion-row>
+  </ion-fab>
   <ion-card>
     <ion-card-header>
       <ion-toolbar>
         <ion-card-title>{{ 'Manage DNS Filter Configuration' | translate}}</ion-card-title>
         <ion-buttons slot="end">
-          <ion-button size="small" fill="solid" (click)="writeConfig()"
+          <ion-button size="small" fill="solid" (click)="writeConfig()" [disabled]="saving"
             matTooltip="{{'Write the DNS filter configuration and restart the DNS server.' | translate }}">
             <ion-icon slot="icon-only" color="success" name="checkmark"></ion-icon>
           </ion-button>
@@ -52,13 +57,13 @@
                   <ion-input [(ngModel)]="newDomain1" name="newDomain1"
                     placeholder="{{'Enter a new domain name'| translate}}" pattern="[a-z0-9.-]+\.[a-z]{2,}$">
                   </ion-input>
-                  <ion-button slot="end" (click)="addNewDomain1()" [disabled]="!addNewDomain1Form.valid">
+                  <ion-button slot="end" (click)="addNewDomain1()" [disabled]="!addNewDomain1Form.valid || saving">
                     <ion-icon slot="icon-only" name="add"></ion-icon>
                   </ion-button>
                 </ion-item>
               </form>
               <ion-item *ngFor="let dom of whiteList; index as i">{{dom}}
-                <ion-button slot="end" (click)="deleteDomain1(i)">
+                <ion-button slot="end" (click)="deleteDomain1(i)" [disabled]="saving">
                   <ion-icon color="danger" slot="icon-only" name="trash"></ion-icon>
                 </ion-button>
               </ion-item>
@@ -74,13 +79,13 @@
                   <ion-input [(ngModel)]="newDomain" name="newDomain"
                     placeholder="{{'Enter a new domain name'| translate}}" pattern="[a-z0-9.-]+\.[a-z]{2,}$">
                   </ion-input>
-                  <ion-button slot="end" (click)="addNewDomain()" [disabled]="!addNewDomainForm.valid">
+                  <ion-button slot="end" (click)="addNewDomain()" [disabled]="!addNewDomainForm.valid || saving">
                     <ion-icon slot="icon-only" name="add"></ion-icon>
                   </ion-button>
                 </ion-item>
               </form>
               <ion-item *ngFor="let dom of badList; index as i">{{dom}}
-                <ion-button slot="end" (click)="deleteDomain(i)">
+                <ion-button slot="end" (click)="deleteDomain(i)" [disabled]="saving">
                   <ion-icon color="danger" slot="icon-only" name="trash"></ion-icon>
                 </ion-button>
               </ion-item>
@@ -94,7 +99,7 @@
               <div *ngFor="let category of categories">
                 <ion-item *ngIf="category.type == 'black'">
                   <ion-label matTooltip="{{category.description}}">{{category.desc}}</ion-label>
-                  <ion-checkbox slot="end" (ionChange)="togleCategory(category.name)"
+                  <ion-checkbox slot="end" (ionChange)="togleCategory(category.name)" [disabled]="saving"
                     [checked]="activeUnboundLists.indexOf(category.name) != -1"></ion-checkbox>
                 </ion-item>
               </div>
