--- a/src/app/protected/cephalix/institutes/lists/institutes.manage.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes.manage.html
@@ -5,60 +5,65 @@
       <ion-title>{{'Manage institutes' | translate}}</ion-title>
     </ion-col>
   </ion-row>
-  <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
+  <ion-fab *ngIf="instituteView" vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
     <ion-fab-button>
       <ion-icon name="arrow-forward-circle"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="start">
       <ion-fab-button>
-        <ion-icon name="ellipsis-vertical-sharp" (click)="openActions($event,null)"></ion-icon>
+        <ion-icon name="arrow-undo" (click)="userList()"></ion-icon>
       </ion-fab-button>
       <ion-fab-button>
-        <ion-icon name="add-circle" (click)="redirectToEdit($event,null)"></ion-icon>
+        <ion-icon name="checkmark" (click)="showSelected()"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button>
-        <ion-icon name="apps" (click)="openCollums($event)"></ion-icon>
-      </ion-fab-button>
+      <!-- ion-fab-button>
+        <ion-icon name="close" (click)="showAll()"></ion-icon>
+      </ion-fab-button -->
     </ion-fab-list>
   </ion-fab>
-  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('institutesFilterMD')"
-    id="institutesFilterMD" showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
+  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('managedInstitutesFilterMD')"
+    id="managedInstitutesFilterMD" showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
   <ion-card>
     <ion-card-header>
       <ion-toolbar>
-          <ion-item>
-            <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('institutesFilter')"
-              id="institutesFilter">
-            </ion-input>
-          </ion-item>
-        <ion-buttons slot="end">
-          <ion-button size="small" fill="solid" (click)="redirectToEdit($event,null)"
-            matTooltip="{{'Create a new institute' | translate }}">
-            <ion-icon slot="icon-only" name="add-circle"></ion-icon>
+        <ion-card-title *ngIf="instituteView">{{'Select institutes to manage by:' | translate}} {{selectedManager.fullName}}</ion-card-title>
+        <ion-card-title *ngIf="!instituteView">{{'Click on user to select managed institutes' | translate}}</ion-card-title>
+        <ion-item>
+          <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('managedInstitutesFilter')"
+            id="managedInstitutesFilter">
+          </ion-input>
+        </ion-item>
+        <ion-buttons *ngIf="instituteView" slot="end">
+          <ion-button size="small" fill="solid" (click)="userList()"
+            matTooltip="{{'Go back to user list' | translate }}">
+            <ion-icon slot="icon-only" name="arrow-undo"></ion-icon>
           </ion-button>
-          <ion-button size="small" fill="solid" (click)="openActions($event,null)"
-            matTooltip="{{'Apply actions on the selected objects' | translate }}">
-            <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
+          <ion-button size="small" fill="solid" (click)="showSelected()"
+            matTooltip="{{'Show the managed institutes.' | translate }}">
+            <ion-icon slot="icon-only" name="checkmark"></ion-icon>
           </ion-button>
-          <ion-button size="small" fill="solid" (click)="openCollums($event)"
-            matTooltip="{{'Select the columns to show' | translate }}">
-            <ion-icon slot="icon-only" name="apps"></ion-icon>
+          <ion-button size="small" fill="solid" (click)="showAll()"
+            matTooltip="{{'Show all institutes.' | translate }}">
+            <ion-icon slot="icon-only" name="close"></ion-icon>
           </ion-button>
         </ion-buttons>
       </ion-toolbar>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular
-        id="agGridTable"
+      <ion-item *ngIf="instituteView">
+        <ion-label>{{ 'Count of managed institutes:' | translate}}</ion-label>
+        <ion-label>{{managedIds.length}}</ion-label>
+      </ion-item>
+      <ag-grid-angular id="instituteManageTable"
         style="width: 100%; height: 100%;"
         rowSelection="multiple"
         class="{{authService.settings.agGridThema}}"
         rowHeight="{{authService.settings.rowHeight}}"
         [context]="context"
         [rowData]="rowData"
+        [defaultColDef]="defaultColDef"
         [columnDefs]="columnDefs"
         [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
-        (selectionChanged)="onSelectionChanged()"
         (gridReady)="onGridReady($event)">
       </ag-grid-angular>
     </ion-card-content>
