--- a/src/app/protected/cephalix/institutes/lists/institutes.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes.component.html
@@ -52,6 +52,7 @@
       <ag-grid-angular id="agGridTable" style="width: 100%; height: 100%;" rowSelection="multiple"
         class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}" [context]="context"
         [rowData]="rowData" [columnDefs]="columnDefs"
+        [defaultColDef]="defaultColDef"
         [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
         (selectionChanged)="onSelectionChanged()" (gridReady)="onGridReady($event)">
       </ag-grid-angular>
