Enhance and fix translations, Thanks for the help of Frank Schubert. Use NgForm instead of FormGroup by setting the default and available printers.

--- a/src/app/protected/cephalix/institutes/details/edit/institute-edit.component.html
+++ b/src/app/protected/cephalix/institutes/details/edit/institute-edit.component.html
@@ -100,7 +100,12 @@
             </ion-col>
             <ion-col>
               <ion-label position="stacked">{{ 'Institute manager' | translate}}</ion-label>
-              <ion-select multiple="true" [(ngModel)]="managers" [compareWith]="compareFn" name="managers" (ionChange)="managerChanged($event)">
+              <ion-select
+                multiple="true"
+                [(ngModel)]="managers"
+                [compareWith]="compareFn"
+                name="managers"
+                (ionChange)="managerChanged($event)">
                 <ion-select-option *ngFor="let user of  users" [value]="user">
                   {{user.fullName}}</ion-select-option>
               </ion-select>
