--- a/src/app/protected/cranix/security/firewall/add-rules/add-remote-rule.component.html
+++ b/src/app/protected/cranix/security/firewall/add-rules/add-remote-rule.component.html
@@ -1,7 +1,7 @@
 <form #addRule="ngForm" (ngSubmit)="addRemoteRule(addRule.value)">
   <ion-header translucent>
     <ion-toolbar>
-      <ion-title>{{  'Add remote acces firewall rule' | translate }}</ion-title>
+      <ion-title>{{  'Add remote access firewall rule' | translate }}</ion-title>
       <ion-buttons slot="end">
         <ion-button type="submit" class="ion-no-margin" [disabled]="!addRule.valid">
           <ion-icon slot="icon-only" color="success" name="checkmark-sharp"></ion-icon>
