--- a/src/app/protected/cranix/softwares/edit-set/edit-installation-set.component.html
+++ b/src/app/protected/cranix/softwares/edit-set/edit-installation-set.component.html
@@ -24,7 +24,7 @@
     <ion-card-header>
       <ion-segment (ionChange)="segmentChanged($event)" [disabled]="submitted" color="secondary" value="overview">
         <ion-segment-button value="overview">
-          <ion-label>{{'Overwiev' | translate}}</ion-label>
+          <ion-label>{{'Overview' | translate}}</ion-label>
         </ion-segment-button>
         <ion-segment-button value="selectObjects">
           <ion-label>{{'Select objects' | translate}}</ion-label>
