--- a/src/app/shared/objects-edit/objects-edit.component.html
+++ b/src/app/shared/objects-edit/objects-edit.component.html
@@ -4,7 +4,7 @@
       <ion-title>{{  objectActionTitle | translate }}</ion-title>
       <ion-buttons slot="end">
         <ion-button *ngIf="objectType == 'institute'" fill="clear" size="small" (click)="setNextDefaults()"
-          matTooltip="{{'Set the next default values' | translate }}" disabled="disabled">
+          matTooltip="{{'Set the next default values' | translate }}" [disabled]="disabled">
           <ion-icon slot="icon-only" name="refresh"></ion-icon>
         </ion-button>
         <ion-button class="ion-no-margin" (click)="onSubmit(editForm.value)" [disabled]="!editForm.valid">
