--- a/src/app/protected/cranix/softwares/softwares.page.html
+++ b/src/app/protected/cranix/softwares/softwares.page.html
@@ -9,7 +9,7 @@
 
       <ion-tab-button tab="status">
         <ion-icon name="stats-chart"></ion-icon>
-        <ion-label>{{ 'Installation status' | translate}}</ion-label>
+        <ion-label>{{ 'Status' | translate}}</ion-label>
       </ion-tab-button>
 
       <ion-tab-button *ngIf="authService.isAllowed('software.download')"  tab="packages">
