--- a/src/app/protected/cranix/system/acls/manage-acls/manage-acls.component.html
+++ b/src/app/protected/cranix/system/acls/manage-acls/manage-acls.component.html
@@ -13,7 +13,7 @@
   <ion-grid>
     <ion-row>
       <ion-col size=12 sizeMd=12 sizeLg=6 sizeXl=6>
-        <ion-title>{{'Acls of the selected object'|translate}}</ion-title>
+        <ion-title>{{'ACLs of the selected object'|translate}}</ion-title>
         <ion-list>
           <ion-item *ngFor="let acl of acls">
             {{acl.acl}}
@@ -24,7 +24,7 @@
         </ion-list>
       </ion-col>
       <ion-col size=12 sizeMd=12 sizeLg=6 sizeXl=6>
-        <ion-title>{{'Available acls'|translate}}</ion-title>
+        <ion-title>{{'Available ACLs'|translate}}</ion-title>
         <ion-list>
           <ion-item *ngFor="let newAcl of availabeAcls">
             {{newAcl.acl}}
