--- a/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
@@ -36,7 +36,7 @@
       <ag-grid-angular 
         id="agGridTable" style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
         rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}" [context]="context" [rowData]="rowData"
-        [columnDefs]="columnDefs" headerHeight="150"
+        [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" headerHeight="150"
         [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (gridReady)="onGridReady($event)">
       </ag-grid-angular>
     </ion-card-content>
