--- a/src/app/protected/cephalix/tickets/tickets.page.html
+++ b/src/app/protected/cephalix/tickets/tickets.page.html
@@ -59,7 +59,7 @@
         [columnDefs]="columnDefs"
         [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
         (gridReady)="onGridReady($event)"
-        id="agGridTable">
+        id="ticketsPageTable">
       </ag-grid-angular>
     </ion-card-content>
   </ion-card>
