--- a/src/app/protected/cephalix/tickets/details/details.page.html
+++ b/src/app/protected/cephalix/tickets/details/details.page.html
@@ -1,5 +1,5 @@
 <cranix-toolbar></cranix-toolbar>
-<ion-content>
+<ion-content *ngIf="ticket">
   <ion-card>
     <ion-card-header>
       <ion-toolbar>
@@ -15,7 +15,6 @@
         {{ticket.email}}: {{ticket.lastname}},{{ticket.firstname}}</ion-card-subtitle>
     </ion-card-header>
   </ion-card>
-
   <ion-card *ngFor="let article of articles">
     <ion-card-header>
       <ion-toolbar>
@@ -24,6 +23,11 @@
           <ion-icon *ngIf="article.articleType == 'I'" name="play-forward"></ion-icon>
         </ion-card-subtitle>
         <ion-buttons slot="end">
+          <div *ngFor="let picture of article.pictures">
+            <ion-button size="small" fill="clear" target="_blank" [href]="picture">
+              <ion-icon slot="icon-only" name="download"></ion-icon>
+            </ion-button>
+          </div>
           <ion-button [color]="article.seen ? 'success' : 'danger'" fill="solid" (click)="setSeenOnArticle(article)">
             <ion-icon slot="icon-only" name="checkmark"></ion-icon>
           </ion-button>
@@ -37,14 +41,10 @@
             <ion-icon slot="icon-only" name="trash"></ion-icon>
           </ion-button>
         </ion-buttons>
-
       </ion-toolbar>
     </ion-card-header>
     <ion-card-content>
       <pre>{{article.text}}</pre>
-    </ion-card-content>
-    <div *ngFor="let picture of article.pictures">
-      <img [src]="picture">
-    </div>
+    </ion-card-content>   
   </ion-card>
 </ion-content>
